--- a/style.css
+++ b/style.css
@@ -652,3 +652,11 @@ width:300px;
         width: 75%;
     }
 }
+
+.noanimation{
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+}
